# Hackathon_II

./: Readme.md
Evolution-Todo/: Hackathon II - Todo Spec-Driven Development.md
Evolution-Todo/.claude/: settings.local.json
Evolution-Todo/.specify/memory/: constitution.md
Evolution-Todo/history/prompts/002-fullstack-todo-auth/: 0006-complete-phase-3-authentication.green.prompt.md
Evolution-Todo/history/prompts/general/: 0001-git-workflow-commit-pr.general.prompt.md
Evolution-Todo/history/prompts/project-structure/: 001-console-todo-app.md
Evolution-Todo/phase-2-web/backend/: pyproject.toml
Evolution-Todo/phase-2-web/backend/src/: main.py
Evolution-Todo/phase-2-web/backend/src/auth/: jwt.py
Evolution-Todo/phase-2-web/backend/src/database/: connection.py
Evolution-Todo/phase-2-web/backend/src/models/: task.py  user.py
Evolution-Todo/phase-2-web/backend/src/routers/: auth.py  tasks.py
Evolution-Todo/phase-2-web/backend/src/services/: task_service.py  user_service.py
Evolution-Todo/phase-2-web/frontend/: package-lock.json  package.json
Evolution-Todo/phase-2-web/frontend/src/app/: globals.css  layout.tsx  page.tsx
Evolution-Todo/phase-3-ai-chatbot/: CLAUDE.md  README.md
Evolution-Todo/phase-3-ai-chatbot/backend/: CLAUDE.md
Evolution-Todo/phase-3-ai-chatbot/backend/src/: main.py
Evolution-Todo/phase-3-ai-chatbot/frontend/: package-lock.json  package.json
Evolution-Todo/specs/001-console-todo-app/: quickstart.md
Evolution-Todo/specs/004-ai-chatbot/: spec.md
Evolution-Todo/specs/004-ai-chatbot/checklists/: requirements.md
(+26 files in other folders)
