[tool.poetry]
name = "todo-backend"
version = "0.1.0"
description = "Backend for the Todo application"
authors = ["Developer <developer@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
sqlmodel = "^0.0.22"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.20"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"